@@ -13,7 +13,22 @@ require 'jiraSOAP/macruby_extensions' if RUBY_ENGINE == 'macruby'
 
 ##
 # All the remote entities as well as the SOAP service client.
-module JIRA
+module JIRA; end
+
+##
+# Inspired by Gem::Deprecate from rubygems.
+module JIRA::Deprecate
+
+  def deprecate name
+    define_method "get_#{name}" do |*args|
+      $stderr.puts <<-EOM
+RemoteAPI#get_#{name} is deprecated and will be removed in the next release.
+Please use RemoteAPI#{name} instead.
+      EOM
+      send name, *args
+    end
+  end
+
 end
 
 require 'jiraSOAP/version'
