@@ -3,6 +3,7 @@
 # SOAP API javadoc. They are generally close to something from the javadoc
 # but with some extra conveniences.
 module JIRA::RemoteAPIAdditions
+  extend JIRA::Deprecate
 
   ##
   # Returns the first field that exactly matches the given
@@ -13,6 +14,6 @@ module JIRA::RemoteAPIAdditions
   def custom_field_with_name name
     get_custom_fields.find { |cf| cf.name == name }
   end
-  alias_method :get_custom_field_with_name, :custom_field_with_name
+  deprecate :custom_field_with_name
 
 end
