@@ -9,15 +9,15 @@ module JIRA::RemoteAPI
   def favourite_filters
     array_jira_call JIRA::Filter, 'getFavouriteFilters'
   end
-  alias_method :get_favourite_filters, :favourite_filters
-  alias_method :get_favorite_filters,  :favourite_filters
   alias_method :favorite_filters,      :favourite_filters
+  deprecate :favorite_filters
+  deprecate :favourite_filters
 
   # @param [String] id
   # @return [Fixnum]
   def issue_count_for_filter_with_id id
     jira_call( 'getIssueCountForFilter', id ).to_i
   end
-  alias_method :get_issue_count_for_filter_with_id, :issue_count_for_filter_with_id
+  deprecate :issue_count_for_filter_with_id
 
 end
