@@ -20,7 +20,7 @@ module JIRA::RemoteAPI
   def issues_from_jql_search jql_query, max_results = 2000
     array_jira_call JIRA::Issue, 'getIssuesFromJqlSearch', jql_query, max_results
   end
-  alias_method :get_issues_from_jql_search, :issues_from_jql_search
+  deprecate :issues_from_jql_search
 
   ##
   # This method can update most, but not all, issue fields. Some limitations
@@ -107,14 +107,14 @@ module JIRA::RemoteAPI
   def issue_with_key issue_key
     JIRA::Issue.new_with_xml jira_call( 'getIssue', issue_key )
   end
-  alias_method :get_issue_with_key, :issue_with_key
+  deprecate :issue_with_key
 
   # @param [String] issue_id
   # @return [JIRA::Issue]
   def issue_with_id issue_id
     JIRA::Issue.new_with_xml jira_call( 'getIssueById', issue_id )
   end
-  alias_method :get_issue_with_id, :issue_with_id
+  deprecate :issue_with_id
 
   # @param [String] id
   # @param [Fixnum] max_results
@@ -123,21 +123,21 @@ module JIRA::RemoteAPI
   def issues_from_filter_with_id id, max_results = 500, offset = 0
     array_jira_call JIRA::Issue, 'getIssuesFromFilterWithLimit', id, offset, max_results
   end
-  alias_method :get_issues_from_filter_with_id, :issues_from_filter_with_id
+  deprecate :issues_from_filter_with_id
 
   # @param [String] issue_id
   # @return [Time]
   def resolution_date_for_issue_with_id issue_id
     jira_call( 'getResolutionDateById', issue_id ).to_iso_date
   end
-  alias_method :get_resolution_date_for_issue_with_id, :resolution_date_for_issue_with_id
+  deprecate :resolution_date_for_issue_with_id
 
   # @param [String] issue_key
   # @return [Time]
   def resolution_date_for_issue_with_key issue_key
     jira_call( 'getResolutionDateByKey', issue_key ).to_iso_date
   end
-  alias_method :get_resolution_date_for_issue_with_key, :resolution_date_for_issue_with_key
+  deprecate :resolution_date_for_issue_with_key
 
   ##
   # This method acts like {#update_issue} except that it also updates
@@ -164,6 +164,6 @@ module JIRA::RemoteAPI
   def available_actions issue_key
     array_jira_call JIRA::NamedEntity, 'getAvailableActions', issue_key
   end
-  alias_method :get_available_actions, :available_actions
+  deprecate :available_actions
 
 end
