@@ -12,14 +12,14 @@ module JIRA::RemoteAPI
   def project_with_key project_key
     JIRA::Project.new_with_xml jira_call( 'getProjectByKey', project_key )
   end
-  alias_method :get_project_with_key, :project_with_key
+  deprecate :project_with_key
 
   # @param [String] project_id
   # @return [JIRA::Project]
   def project_with_id project_id
     JIRA::Project.new_with_xml jira_call( 'getProjectById', project_id )
   end
-  alias_method :get_project_with_id, :project_with_id
+  deprecate :project_with_id
 
   ##
   # @todo Parse the permission scheme
@@ -30,7 +30,7 @@ module JIRA::RemoteAPI
   def project_including_schemes_with_id project_id
     JIRA::Project.new_with_xml jira_call( 'getProjectWithSchemesById', project_id )
   end
-  alias_method :get_project_including_schemes_with_id, :project_including_schemes_with_id
+  deprecate :project_including_schemes_with_id
 
   ##
   # @note This will not fill in {JIRA::Scheme} data for the projects.
@@ -39,7 +39,7 @@ module JIRA::RemoteAPI
   def projects
     array_jira_call JIRA::Project, 'getProjectsNoSchemes'
   end
-  alias_method :get_projects, :projects
+  deprecate :projects
 
   ##
   # Requires you to set at least a project name, key, and lead.
