@@ -6,12 +6,12 @@ module JIRA::RemoteAPI
   def notification_schemes
     array_jira_call JIRA::NotificationScheme, 'getNotificationSchemes'
   end
-  alias_method :get_notification_schemes, :notification_schemes
+  deprecate :notification_schemes
 
   # @return [Array<JIRA::PermissionScheme>]
   def permission_schemes
     array_jira_call JIRA::PermissionScheme, 'getPermissionSchemes'
   end
-  alias_method :get_permission_schemes, :permission_schemes
+  deprecate :permission_schemes
 
 end
