@@ -9,12 +9,12 @@ module JIRA::RemoteAPI
   def server_info
     JIRA::ServerInfo.new_with_xml jira_call( 'getServerInfo' )
   end
-  alias_method :get_server_info, :server_info
+  deprecate :server_info
 
   # @return [JIRA::ServerConfiguration]
   def server_configuration
     JIRA::ServerConfiguration.new_with_xml jira_call( 'getConfiguration' )
   end
-  alias_method :get_server_configuration, :server_configuration
+  deprecate :server_configuration
 
 end
