@@ -1,5 +1,6 @@
 Version 0.9.0
 
+	* Properly deprecate #get_ methods
 	* Add RemoteAPI#progress_workflow_action (thanks Lucas Jourdes)
 	* Add RemoteAPI#available_action (thanks Lucas Jourdes)
 	* Add extra documentation about updating fields (thanks Vincent Beau)
